src/test/ui/fn/implied-bounds-unnorm-associated-type.stderr
error[E0491]: in type `&'a &'b ()`, reference has a longer lifetime than the data it references
  --> $DIR/implied-bounds-unnorm-associated-type.rs:13:29
   |
LL | fn f<'a, 'b>(s: &'b str, _: <&'a &'b () as Trait>::Type) -> &'a str {
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime `'a` as defined here
  --> $DIR/implied-bounds-unnorm-associated-type.rs:13:6
   |
LL | fn f<'a, 'b>(s: &'b str, _: <&'a &'b () as Trait>::Type) -> &'a str {
   |      ^^
note: but the referenced data is only valid for the lifetime `'b` as defined here
  --> $DIR/implied-bounds-unnorm-associated-type.rs:13:10
   |
LL | fn f<'a, 'b>(s: &'b str, _: <&'a &'b () as Trait>::Type) -> &'a str {
   |          ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0491`.
